# matrix-rust-sdk-bindings

./: Cargo.toml  index.d.ts  index.js  package.json
.cargo/: config.toml
.github/workflows/: build-npm-and-release.yml  ci.yml  coverage.yml  docs.yml
crates/matrix-sdk-crypto-nodejs/: package.json  prepare-output.js  prepare-release.sh
crates/matrix-sdk-crypto-nodejs/.cargo/: config  config.toml
crates/matrix-sdk-crypto-nodejs/release/: Dockerfile.alpine  Dockerfile.linux  Dockerfile.linux.gnu  Dockerfile.linux.musl
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: request.rs
