[package]
authors = ["Mauro Martinez <mauromb3@gmail.com>"]
edition = "2021"
name    = "rocketchat-matrix-sdk-crypto-nodejs"
rust-version = "1.56"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = { version = "2.0.0", features = ["full"] }
napi = { version = "2.0.0", features = ["full"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
http = "0.2.4"

# For some reason the futures lib is missing in published builds, so copy the dep from
# the matrix-sdk-crypto crate.
futures = { version = "0.3.15", default-features = false, features = ["executor"] }

[dependencies.matrix-sdk-crypto]
default_features = false
features = ["sled_cryptostore"]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "59d21d9683cd83196b6b4de6c605fb611d20d384"

[dependencies.matrix-sdk-common]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "59d21d9683cd83196b6b4de6c605fb611d20d384"

[dependencies.ruma]
git = "https://github.com/ruma/ruma/"
rev = "37095f88553b311e7a70adaaabe39976fb8ff71c"
features = ["client-api-c", "rand", "unstable-pre-spec"]

[dependencies.tokio]
version = "1.7.1"
default_features = false
features = ["rt-multi-thread"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
